# devops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ArchiveIssuesCollector.yml  Geo2IpFetch.yml  Unittest.yml  XNASpriteFontCompile.yml  liveness-check.yml
archived_issues_collector/: .gitignore  ChangeLog输出流水线使用指南.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  todo.md
archived_issues_collector/config/: README.md  config.json
archived_issues_collector/script/: git_fetch.sh
archived_issues_collector/src/: archive_document.py  archive_document_collector.py  base64_decode.py  config_checker.py  config_data_source.py  data_source.py  env.py  exception.py  get_args.py  http_request.py  json_config.py  log.py  main.py  output_change_test.py  output_changes.py  version_code.py
archived_issues_collector/tests/: conftest.py  test_archive_document.py  test_archive_document_collector.py  test_base64_decode.py  test_config_checker.py  test_config_data_source.py  test_get_args.py  test_http_request.py  test_json_dumps.py  test_version_code.py
geo2-ip/: geo2-cn-ip-fetch.sh  verify_cn_ip.py
geo2-ip/output/: white-list-cn.conf
output/: white-list-cn.conf
scripts/: apply.sh
tests/: SpriteFont0.spriteFont  SpriteFont0.xsd
